# openmanage-mcp-server

./: .dockerignore  Dockerfile  README.md  credentials.json.example  pyproject.toml
.github/workflows/: docker.yml
src/clr_openmanage_mcp/: __init__.py  __main__.py  annotations.py  config.py  middleware.py  ome_client.py  server.py
src/openmanage_mcp_server/: config.py  server.py
tests/: test_annotations.py
