[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clr-openmanage-mcp"
version = "2.0.0"
description = "MCP server for Dell OpenManage Enterprise server management"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Clearminds AB"}]
keywords = ["mcp", "dell", "openmanage", "ome", "server-management", "model-context-protocol"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.28.1",
    "fastmcp>=2.14.0,<3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.urls]
Homepage = "https://github.com/clearminds/clr-openmanage-mcp"
Repository = "https://github.com/clearminds/clr-openmanage-mcp"
Issues = "https://github.com/clearminds/clr-openmanage-mcp/issues"

[project.scripts]
clr-openmanage-mcp = "clr_openmanage_mcp.server:main"
